dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-second-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-second-app
  template:
    metadata:
      labels:
        app: spring-boot-second
    spec:
      containers:
      - name : app
        image: ghcr.io/veresattila2002/helloworldsecondapp:1.0
        ports:
        - containerPort: 8080
