dev/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway 
metadata:
  name: spring-boot-second-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP 
      hosts:
        - "*"
