dev/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: spring-boot-second-app-vs
  namespace: spring-boot-second-app
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/spring-boot-app-gateway
  http:
    - match:
      - uri:
          prefix: /getmessage

      route:
      - destination:
          host: spring-boot-second-app.spring-boot-second-app.svc.cluster.local
          port:
            number: 80
            name: asr
